Improve TOC semantics and update layout

--- a/site/index.html
+++ b/site/index.html
@@ -17,11 +17,13 @@ layout: home
 
         <div class="row text-center text-md-start">
           <div class="col-md-auto">
-            <a href="{{ site.path }}/{{ site.version.docs }}/get-started/download/" class="btn btn-lg btn-start" onclick="ga('send', 'event', 'Homepage', 'Download', 'Download {{ site.version.current }}');">Download</a>
+            <a href="{{ site.path }}/{{ site.version.docs }}/get-started/quick-start/" class="btn btn-home btn-start w-100" onclick="ga('send', 'event', 'Homepage', 'Get Started', 'Get Started {{ site.version.current }}');">Get Started</a>
           </div>
-          <!--<div class="w-100 d-md-none"></div> -->
-          <div class="col-md-auto">
-            Current version: <strong>{{ site.version.current }}</strong>
+          <div class="col-md-auto mt-1 mt-md-0">
+            <a href="{{ site.path }}/{{ site.version.docs }}/get-started/download/" class="btn btn-home btn-download w-100" onclick="ga('send', 'event', 'Homepage', 'Download', 'Download {{ site.version.current }}');">Download</a>
+          </div>
+          <div class="col-12 mt-1">
+            Current version: <strong>v{{ site.version.current }}</strong>
             <br />
             <a href="{{ site.changelog }}" class="text-light small">Read the Changelog</a>
             <br />
