Layout and content updates for widget pages

--- a/site/index.html
+++ b/site/index.html
@@ -115,7 +115,7 @@ layout: home
       <div class="media">
         <img src="{{ site.path }}/assets/img/sass.svg" class="d-flex me-1" width="64" alt="Sass logo">
         <div class="media-body">
-          <p class="mb-0">Figuration compiles and uses standard CSS for it's output, but on the source side we use the power of <a href="http://sass-lang.com/">Sass</a> and <a href="https://github.com/postcss/autoprefixer">Autoprefixer</a> for faster and consistent development.</p>
+          <p class="mb-0">Figuration compiles and uses standard CSS for its output, but on the source side we use the power of <a href="http://sass-lang.com/">Sass</a> and <a href="https://github.com/postcss/autoprefixer">Autoprefixer</a> for faster and consistent development.</p>
         </div>
       </div>
     </div>
