--- a/site/index.html
+++ b/site/index.html
@@ -90,7 +90,10 @@ layout: home
 <div class="container-md border-b py-2">
   <div class="row text-center text-md-start">
     <div class="col-md-6">
-      <h2>Get Started Now</h2>
+      <h2>
+        <span class="home-icon-box bg-info text-light"><span class="fas fa-paper-plane" aria-hidden="true"></span></span>
+        Get Started Now
+      </h2>
       <p>Quickly get up and running with Figuration by including the compiled CSS and JavaScript in your document. Add the following CDN links in the <code>&lt;head&gt;</code> of your HTML document.</p>
       <p>More information is available on the <a href="{{ site.path }}/{{ site.version.docs }}/get-started/quick-start/">Quick Start page</a>.</p>
     </div>
@@ -110,13 +113,19 @@ layout: home
 <div class="container-md border-b py-2">
   <div class="row text-center text-md-start">
     <div class="col-md-6 pb-1 pb-md-0">
-      <h2>Flexbox Enabled</h2>
+      <h2>
+        <span class="home-icon-box bg-success-600 text-light"><span class="fas fa-th-large" aria-hidden="true"></span></span>
+        Flexbox Enabled
+      </h2>
       <p>Many of Figuration's components, but not all, are built using flexbox.  This means enhanced layout and alignment control, but it does come at the cost of not being able to support older browsers.</p>
     </div>
     <div class="col-md-6 border-t border-md-t-0 border-md-s pt-2 pt-md-0">
-      <h2>Sass Source</h2>
+      <h2>
+        <span class="home-icon-box bg-secondary text-light"><span class="fab fa-sass" aria-hidden="true"></span></span>
+        Sass Source
+      </h2>
       <div class="media">
-        <img src="{{ site.path }}/assets/img/sass.svg" class="d-flex me-1" width="64" alt="Sass logo">
+        <a href="http://sass-lang.com/"><img src="{{ site.path }}/assets/img/sass.svg" class="d-flex me-1" width="64" alt="Sass logo"></a>
         <div class="media-body">
           <p class="mb-0">Figuration compiles and uses standard CSS for its output, but on the source side we use the power of <a href="http://sass-lang.com/">Sass</a> and <a href="https://github.com/postcss/autoprefixer">Autoprefixer</a> for faster and consistent development.</p>
         </div>
@@ -127,12 +136,15 @@ layout: home
 
 <div class="container py-2">
   <div class="row text-center text-md-start">
-    <div class="col-sm-6 col-lg-4">
-      <h2>Browser Support</h2>
+    <div class="col-md-6 col-lg-5">
+      <h2>
+        <span class="home-icon-box bg-primary-600 text-light"><span class="fas fa-columns" aria-hidden="true"></span></span>
+        Browser Support
+      </h2>
       <p>Most current browers are supported.  Additional details can be found on the <a href="{{ site.path }}/{{ site.version.docs }}/get-started/browsers-and-devices/">Browsers &amp; Devices page</a>.</p>
     </div>
-    <div class="col-sm-6 col-lg-8 home-feature mt-1 mt-sm-0">
-      <ul class="list list-horizontal flex-wrap flex-center text-center small">
+    <div class="col-md-6 col-lg-7 home-feature">
+      <ul class="list list-horizontal flex-wrap flex-center text-center small mt-0_5 mt-md-0">
         <li class="list-item"><img src="{{ site.path }}/assets/img/chrome.png" class="d-block" alt="" />Chrome</li>
         <li class="list-item"><img src="{{ site.path }}/assets/img/firefox.png" class="d-block" alt="" />Firefox</li>
         <li class="list-item"><img src="{{ site.path }}/assets/img/internet-explorer.png" class="d-block" alt="" />IE 11+</li>
