--- a/site/4.0/examples/navbar-fixed-top/index.html
+++ b/site/4.0/examples/navbar-fixed-top/index.html
@@ -30,7 +30,7 @@ body {
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark flex-between fixed-top">
     <a href="#" class="navbar-brand">Fixed Navbar</a>
-    <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarR3">
+    <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarR3">
         <span aria-hidden="true">&#8801;</span>
     </button>
 
