--- a/site/4.0/examples/navbars/index.html
+++ b/site/4.0/examples/navbars/index.html
@@ -47,7 +47,7 @@
 <h2>Basic Navbars</h2>
 
 <nav class="navbar navbar-light bg-light">
-    <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarB0">
+    <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarB0">
         <span aria-hidden="true">&#8801;</span>
     </button>
     <a href="#" class="navbar-brand ms-0_5">Basic</a>
@@ -81,7 +81,7 @@
 
 <nav class="navbar navbar-light bg-light flex-between">
     <a href="#" class="navbar-brand">Basic</a>
-    <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarB1">
+    <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarB1">
         <span aria-hidden="true">&#8801;</span>
     </button>
 
@@ -116,7 +116,7 @@
 
 <nav class="navbar navbar-expand navbar-light bg-light">
     <a href="#" class="navbar-brand">Expand Always</a>
-    <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarR0">
+    <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarR0">
         <span aria-hidden="true">&#8801;</span>
     </button>
 
@@ -149,7 +149,7 @@
 
 <nav class="navbar navbar-expand-sm navbar-light bg-light flex-between">
     <a href="#" class="navbar-brand">Expand at `sm`</a>
-    <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarR1">
+    <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarR1">
         <span aria-hidden="true">&#8801;</span>
     </button>
 
@@ -182,7 +182,7 @@
 
 <nav class="navbar navbar-expand-md navbar-light bg-light flex-between">
     <a href="#" class="navbar-brand">Expand at `md`</a>
-    <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarR2">
+    <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarR2">
         <span aria-hidden="true">&#8801;</span>
     </button>
 
@@ -215,7 +215,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light flex-between">
     <a href="#" class="navbar-brand">Expand at `lg`</a>
-    <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarR3">
+    <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarR3">
         <span aria-hidden="true">&#8801;</span>
     </button>
 
@@ -248,7 +248,7 @@
 
 <nav class="navbar navbar-expand-xl navbar-light bg-light flex-between">
     <a href="#" class="navbar-brand">Expand at `xl`</a>
-    <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarR4">
+    <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarR4">
         <span aria-hidden="true">&#8801;</span>
     </button>
 
@@ -283,7 +283,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light flex-between">
     <a href="#" class="navbar-brand">Justified</a>
-    <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarJ0">
+    <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarJ0">
         <span aria-hidden="true">&#8801;</span>
     </button>
 
@@ -319,7 +319,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light flex-between">
     <div class="container">
         <a href="#" class="navbar-brand">Container</a>
-        <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarC0">
+        <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarC0">
             <span aria-hidden="true">&#8801;</span>
         </button>
 
@@ -354,7 +354,7 @@
 <h2>Centered Navbars</h2>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarCO0">
+    <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarCO0">
         <span aria-hidden="true">&#8801;</span>
     </button>
 
@@ -384,7 +384,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-        <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarCO1">
+        <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarCO1">
             <span aria-hidden="true">&#8801;</span>
         </button>
 
@@ -418,7 +418,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light flex-between">
         <a href="#" class="navbar-brand">Expand at `lg`</a>
-        <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarIC0">
+        <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarIC0">
             <span aria-hidden="true">&#8801;</span>
         </button>
 
@@ -450,7 +450,7 @@
     </nav>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarIC1">
+        <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarIC1">
             <span aria-hidden="true">&#8801;</span>
         </button>
 
@@ -484,7 +484,7 @@
 <nav class="navbar navbar-expand-xl navbar-light bg-light flex-between">
     <div class="container-xl px-0 px-xl-1">
         <a href="#" class="navbar-brand">Expand at `xl`</a>
-        <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarRC0">
+        <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarRC0">
             <span aria-hidden="true">&#8801;</span>
         </button>
 
