--- a/test/visual/modal.html
+++ b/test/visual/modal.html
@@ -33,7 +33,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light flex-between sticky-top">
   <a href="#" class="navbar-brand">Navbar</a>
-  <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbar0">
+  <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbar0">
     <span aria-hidden="true">&#8801;</span>
   </button>
 
@@ -484,7 +484,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light flex-between fixed-bottom">
   <a href="#" class="navbar-brand">Navbar</a>
-  <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbar1">
+  <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbar1">
     <span aria-hidden="true">&#8801;</span>
   </button>
 
