--- a/test/visual/navbar.html
+++ b/test/visual/navbar.html
@@ -43,7 +43,7 @@
 <h2>Basic Navbars</h2>
 
 <nav class="navbar navbar-light bg-light">
-    <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarB0">
+    <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarB0">
         <span aria-hidden="true">&#8801;</span>
     </button>
     <a href="#" class="navbar-brand ms-0_5">Basic</a>
@@ -83,7 +83,7 @@
 
 <nav class="navbar navbar-light bg-light flex-between">
     <a href="#" class="navbar-brand">Basic</a>
-    <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarB1">
+    <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarB1">
         <span aria-hidden="true">&#8801;</span>
     </button>
 
@@ -118,7 +118,7 @@
 
 <nav class="navbar navbar-expand navbar-light bg-light">
     <a href="#" class="navbar-brand">Expand Always</a>
-    <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarR0">
+    <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarR0">
         <span aria-hidden="true">&#8801;</span>
     </button>
 
@@ -151,7 +151,7 @@
 
 <nav class="navbar navbar-expand-sm navbar-light bg-light flex-between">
     <a href="#" class="navbar-brand">Expand at `sm`</a>
-    <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarR1">
+    <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarR1">
         <span aria-hidden="true">&#8801;</span>
     </button>
 
@@ -184,7 +184,7 @@
 
 <nav class="navbar navbar-expand-md navbar-light bg-light flex-between">
     <a href="#" class="navbar-brand">Expand at `md`</a>
-    <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarR2">
+    <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarR2">
         <span aria-hidden="true">&#8801;</span>
     </button>
 
@@ -217,7 +217,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light flex-between">
     <a href="#" class="navbar-brand">Expand at `lg`</a>
-    <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarR3">
+    <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarR3">
         <span aria-hidden="true">&#8801;</span>
     </button>
 
@@ -250,7 +250,7 @@
 
 <nav class="navbar navbar-expand-xl navbar-light bg-light flex-between">
     <a href="#" class="navbar-brand">Expand at `xl`</a>
-    <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarR4">
+    <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarR4">
         <span aria-hidden="true">&#8801;</span>
     </button>
 
@@ -291,7 +291,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light flex-between">
     <a href="#" class="navbar-brand">Justified</a>
-    <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarJ0">
+    <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarJ0">
         <span aria-hidden="true">&#8801;</span>
     </button>
 
@@ -327,7 +327,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light flex-between">
     <div class="container">
         <a href="#" class="navbar-brand">Container</a>
-        <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarC0">
+        <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarC0">
             <span aria-hidden="true">&#8801;</span>
         </button>
 
@@ -362,7 +362,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light px-0">
     <div class="container-fluid">
         <a href="#" class="navbar-brand">Container</a>
-        <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarC1">
+        <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarC1">
             <span aria-hidden="true">&#8801;</span>
         </button>
 
@@ -397,7 +397,7 @@
 <h2>Centered Navbars</h2>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarCO0">
+    <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarCO0">
         <span aria-hidden="true">&#8801;</span>
     </button>
 
@@ -427,7 +427,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-        <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarCO1">
+        <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarCO1">
             <span aria-hidden="true">&#8801;</span>
         </button>
 
@@ -461,7 +461,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light flex-between">
         <a href="#" class="navbar-brand">Expand at `lg`</a>
-        <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarIC0">
+        <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarIC0">
             <span aria-hidden="true">&#8801;</span>
         </button>
 
@@ -493,7 +493,7 @@
     </nav>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarIC1">
+        <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarIC1">
             <span aria-hidden="true">&#8801;</span>
         </button>
 
