Docs: Landmark updates

--- a/site/4.0/examples/navbar-fixed-top/index.html
+++ b/site/4.0/examples/navbar-fixed-top/index.html
@@ -61,7 +61,7 @@ body {
     </div>
 </nav>
 
-<div class="container">
+<main class="container">
     <div class="jumbotron">
         <h1>Fixed Top Navbar Example</h1>
         <p class="lead">
@@ -75,7 +75,7 @@ body {
             <a href="{{ site.path }}/{{ version.docs }}/components/navbar/" class="btn btn-lg btn-primary">View navbar docs &raquo;</a>
         </p>
     </div>
-</div>
+</main>
 
 </body>
 </html>
