--- a/site/4.0/examples/starter-template/index.html
+++ b/site/4.0/examples/starter-template/index.html
@@ -40,7 +40,7 @@
     </ul>
 </nav>
 
-<div class="container">
+<main class="container">
 
     <div class="starter-template">
         <h1>Hello, world!</h1>
@@ -48,7 +48,7 @@
         <p>This is just a quick start! Only basic HTML and a sample of additional CSS is used.</p>
     </div>
 
-</div><!-- /.container -->
+</main><!-- /.container -->
 
 </body>
 </html>
