Collapse: Fix 'follow' option

--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -1840,6 +1840,12 @@ $(window).ready(function() {
             </div>
             <div class="well">
                 <h3>Collapse Test</h3>
+                <button type="button" id="coll_2" class="btn" data-cfw="collapse" data-cfw-collapse-target="#collapseTest_follow" data-cfw-collapse-follow="true">Follow <span class="caret"></span></button>
+                <br>
+                <div id="collapseTest_follow">
+                    <p>Fusce vel posuere nulla. Cras urna enim, tristique a diam quis, suscipit euismod ante. Praesent fringilla tincidunt augue facilisis condimentum. Nam eget congue nisl. Sed hendrerit, arcu convallis gravida scelerisque, purus lectus scelerisque enim, nec gravida sapien diam eget sem. In sed sem et diam condimentum malesuada? Nam cursus venenatis posuere. Praesent id purus turpis. Curabitur pretium arcu nec diam interdum, id elementum sapien ultricies. Fusce ornare magna et risus rhoncus; eu consectetur sem vulputate.</p>
+                </div>
+
                 <button type="button" id="coll_2" class="btn" data-cfw="collapse" data-cfw-collapse-target="#collapseTest_1">Collapse <span class="caret"></span></button>
                 <!-- <button type="button" class="open" data-cfw="collapse" data-cfw-collapse-target="#collapseTest_1">Collapse</button> -->
                 <br>
