Collapse: Only block toggle on anchors and nested anchors

--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -1800,7 +1800,7 @@ $(window).ready(function() {
             <div class="well">
                 <label>
                     Toggle Collapse
-                    <input type="checkbox" data-cfw="collapse" data-cfw-collapse-target="#collapseCheck2">
+                    <input type="checkbox" data-cfw="collapse" data-cfw-collapse-target="#collapseCheck">
                 </label>
                 <div id="collapseCheck" class="collapse">
                     <p>Fusce vel posuere nulla. Cras urna enim, tristique a diam quis, suscipit euismod ante. Praesent fringilla tincidunt augue facilisis condimentum. Nam eget congue nisl. Sed hendrerit, arcu convallis gravida scelerisque, purus lectus scelerisque enim, nec gravida sapien diam eget sem. In sed sem et diam condimentum malesuada? Nam cursus venenatis posuere. Praesent id purus turpis. Curabitur pretium arcu nec diam interdum, id elementum sapien ultricies. Fusce ornare magna et risus rhoncus; eu consectetur sem vulputate.</p>
