Tooltip/Popover: Improve keyboard navigation focus handling

--- a/test/visual/tooltip.html
+++ b/test/visual/tooltip.html
@@ -43,17 +43,22 @@
 
 <button class="btn" title="Tooltip at top" data-cfw="tooltip" data-cfw-tooltip-placement="top auto">Tooltip at top</button>
 
+<button class="btn" title="Tooltip at top" data-cfw="tooltip" data-cfw-tooltip-placement="top auto" data-cfw-tooltip-container="body">Tooltip container body</button>
+
 <button class="btn float-end" title="Tooltip at end" data-cfw="tooltip" data-cfw-tooltip-placement="forward auto">Tooltip at end</button>
 
 <button class="btn" style="position: absolute; left: 0; bottom: 0;" title="Tooltip at bottom" data-cfw="tooltip" data-cfw-tooltip-placement="bottom auto">Tooltip at bottom</button>
 
 <button class="btn" style="position: absolute; left: 12rem; bottom: 0;" title="Tooltip at bottom" data-cfw="tooltip" data-cfw-tooltip-placement="forward">Tooltip at bottom</button>
 
-
 <button class="btn" title="Popover at top" data-cfw="popover" data-cfw-popover-placement="top auto" data-cfw-popover-drag="true" data-cfw-popover-content="Wow">Popover at top</button>
 <button class="btn" title="Popover at top" data-cfw="popover" data-cfw-popover-placement="top auto" data-cfw-popover-drag="true" data-cfw-popover-content="Wow">Popover at top</button>
+<button class="btn" title="Popover at top" data-cfw="popover" data-cfw-popover-placement="top auto" data-cfw-popover-content="Wow" data-cfw-popover-container="body">Popover container body</button>
 
 <button class="btn btn-primary" data-cfw="modal" data-cfw-modal-target="#saveModal">Modal</button>
+
+<button class="btn" title="Popover at top" data-cfw="popover" data-cfw-popover-placement="top auto" data-cfw-popover-content="Wow" data-cfw-popover-container="body">Popover container body</button>
+<button class="btn" title="Popover at top" data-cfw="popover" data-cfw-popover-placement="top auto" data-cfw-popover-content="Wow" data-cfw-popover-container="body">Popover container body</button>
 
 <div class="modal" id="saveModal">
     <div class="modal-dialog">
