Nav: Allow buttons to be used for `.nav-link`s

--- a/test/visual/nav.html
+++ b/test/visual/nav.html
@@ -175,6 +175,147 @@
         </li>
     </ul>
 
+    <hr>
+
+    <h2>Nav fill/justify - pills/tabs should expand to fill</h2>
+    <h3>Anchors</h3>
+    <h4>Fill</h4>
+    <ul class="nav nav-pills nav-fill">
+        <li class="nav-item">
+            <a class="nav-link active" href="#">Pill 1</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Pill 2 longer text</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Pill 3</a>
+        </li>
+    </ul>
+    <ul class="nav nav-tabs nav-fill">
+        <li class="nav-item">
+            <a class="nav-link active" href="#">Tab 1</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Tab 2 longer text</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Tab 3</a>
+        </li>
+    </ul>
+    <div class="nav nav-pills nav-fill">
+        <a class="nav-link active" href="#">Pill 1</a>
+        <a class="nav-link" href="#">Pill 2 longer text</a>
+        <a class="nav-link" href="#">Pill 3</a>
+    </div>
+    <div class="nav nav-tabs nav-fill">
+        <a class="nav-link active" href="#">Tab 1</a>
+        <a class="nav-link" href="#">Tab 2 longer text</a>
+        <a class="nav-link" href="#">Tab 3</a>
+    </div>
+
+    <h4>Justify</h4>
+    <ul class="nav nav-pills nav-justify">
+        <li class="nav-item">
+            <a class="nav-link active" href="#">Pill 1</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Pill 2 longer text</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Pill 3</a>
+        </li>
+    </ul>
+    <ul class="nav nav-tabs nav-justify">
+        <li class="nav-item">
+            <a class="nav-link active" href="#">Tab 1</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Tab 2 longer text</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Tab 3</a>
+        </li>
+    </ul>
+    <div class="nav nav-pills nav-justify">
+        <a class="nav-link active" href="#">Pill 1</a>
+        <a class="nav-link" href="#">Pill 2 longer text</a>
+        <a class="nav-link" href="#">Pill 3</a>
+    </div>
+    <div class="nav nav-tabs nav-justify">
+        <a class="nav-link active" href="#">Tab 1</a>
+        <a class="nav-link" href="#">Tab 2 longer text</a>
+        <a class="nav-link" href="#">Tab 3</a>
+    </div>
+
+    <h3>Buttons</h3>
+    <h4>Fill</h4>
+    <ul class="nav nav-pills nav-fill">
+        <li class="nav-item">
+            <button type="button" class="nav-link active">Pill 1</button>
+        </li>
+        <li class="nav-item">
+            <button type="button" class="nav-link">Pill 2 longer text</button>
+        </li>
+        <li class="nav-item">
+            <button type="button" class="nav-link">Pill 3</button>
+        </li>
+    </ul>
+    <ul class="nav nav-tabs nav-fill">
+        <li class="nav-item">
+            <button type="button" class="nav-link active">Tab 1</button>
+        </li>
+        <li class="nav-item">
+            <button type="button" class="nav-link">Tab 2 longer text</button>
+        </li>
+        <li class="nav-item">
+            <button type="button" class="nav-link">Tab 3</button>
+        </li>
+    </ul>
+    <div class="nav nav-pills nav-fill">
+        <button type="button" class="nav-link active">Pill 1</button>
+        <button type="button" class="nav-link">Pill 2 longer text</button>
+        <button type="button" class="nav-link">Pill 3</button>
+    </div>
+    <div class="nav nav-tabs nav-fill">
+        <button type="button" class="nav-link active">Tab 1</button>
+        <button type="button" class="nav-link">Tab 2 longer text</button>
+        <button type="button" class="nav-link">Tab 3</button>
+    </div>
+
+    <h4>Justify</h4>
+    <ul class="nav nav-pills nav-justify">
+        <li class="nav-item">
+            <button type="button" class="nav-link active">Pill 1</button>
+        </li>
+        <li class="nav-item">
+            <button type="button" class="nav-link">Pill 2 longer text</button>
+        </li>
+        <li class="nav-item">
+            <button type="button" class="nav-link">Pill 3</button>
+        </li>
+    </ul>
+    <ul class="nav nav-tabs nav-justify">
+        <li class="nav-item">
+            <button type="button" class="nav-link active">Tab 1</button>
+        </li>
+        <li class="nav-item">
+            <button type="button" class="nav-link">Tab 2 longer text</button>
+        </li>
+        <li class="nav-item">
+            <button type="button" class="nav-link">Tab 3</button>
+        </li>
+    </ul>
+    <div class="nav nav-pills nav-justify">
+        <button type="button" class="nav-link active">Pill 1</button>
+        <button type="button" class="nav-link">Pill 2 longer text</button>
+        <button type="button" class="nav-link">Pill 3</button>
+    </div>
+    <div class="nav nav-tabs nav-justify">
+        <button type="button" class="nav-link active">Tab 1</button>
+        <button type="button" class="nav-link">Tab 2 longer text</button>
+        <button type="button" class="nav-link">Tab 3</button>
+    </div>
+
 </div>
 
 </body>
