Add missing input group visual test

--- a/test/visual/input-group.html
+++ b/test/visual/input-group.html
@@ -789,6 +789,19 @@
 </div>
 
 <div class="input-group">
+    <div class="btn-check">
+        <input id="radioVC0-0" type="checkbox" class="btn-check-input">
+        <label for="radioVC0-0" class="btn btn-outline-primary">Check</label>
+    </div>
+    <input type="text" class="form-control is-invalid" required="">
+    <div class="btn-check input-group-end">
+        <input id="radioVC0-1" type="checkbox" class="btn-check-input">
+        <label for="radioVC0-1" class="btn btn-outline-success">Check</label>
+    </div>
+    <div class="invalid-feedback">Example invalid feedback.</div>
+</div>
+
+<div class="input-group">
     <div class="input-group-text">Addon</div>
     <select class="form-control is-invalid input-group-end">
         <option>1</option>
