Cards: Adjust `.card-list` border and margin handling

--- a/test/visual/list.html
+++ b/test/visual/list.html
@@ -537,6 +537,63 @@
     <a href="#" class="list-item list-item-action list-item-dark active">Dark list item</a>
 </div>
 
+<div class="row row-cols-1 row-cols-md-3">
+     <div class="col">
+        <div class="card">
+            <div class="card-header">Header</div>
+            <div class="card-body">
+                <h5 class="card-title">Primary card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+            <ul class="list list-ruled list-spaced card-list">
+                <li class="list-item">Ruled list</li>
+                <li class="list-item">A second item</li>
+                <li class="list-item">A third item</li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="col">
+        <div class="card text-white bg-primary">
+            <div class="card-header">Header</div>
+            <div class="card-body">
+                <h5 class="card-title">Primary card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+            <ul class="list list-ruled list-spaced card-list border-inherit">
+                <li class="list-item">Ruled list</li>
+                <li class="list-item">A second item</li>
+                <li class="list-item">A third item</li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="col">
+        <div class="card text-white bg-primary">
+            <ul class="list list-divided list-spaced card-list border-inherit">
+                <li class="list-item">Divided list</li>
+                <li class="list-item">A second item</li>
+                <li class="list-item">A third item</li>
+            </ul>
+        </div>
+        <div class="card bg-light">
+            <ul class="list list-ruled list-spaced card-list border-inherit">
+                <li class="list-item">Ruled list</li>
+                <li class="list-item">A second item</li>
+                <li class="list-item">A third item</li>
+            </ul>
+        </div>
+        <div class="card">
+            <div class="card-header">Header</div>
+            <ul class="list list-ruled list-spaced card-list">
+                <li class="list-item">Ruled list</li>
+                <li class="list-item">A second item</li>
+                <li class="list-item">A third item</li>
+            </ul>
+            <div class="card-footer">Footer</div>
+        </div>
+    </div>
+</div>
 
 </div>
 
