Slideshow: Rework key handling and focus

--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -450,7 +450,7 @@ $(window).ready(function() {
                         <li class="page-item"><a href="#" class="page-link" data-cfw-slideshow-nav="prev" aria-label="Previous">&laquo;</a></li>
                         <li class="page-item"><a href="#slide0" class="page-link" data-cfw="tab">Slide 1</a></li>
                         <li class="page-item"><a href="#slide1" class="page-link" data-cfw="tab">Slide 2</a></li>
-                        <li class="page-item"><a href="#slide2" class="page-link" data-cfw="tab">Slide 3</a></li>
+                        <li class="page-item"><a href="#slide2" class="page-link disabled" data-cfw="tab">Slide 3</a></li>
                         <li class="page-item"><a href="#slide3" class="page-link" data-cfw="tab">Slide 4</a></li>
                         <li class="page-item"><a href="#" class="page-link" data-cfw-slideshow-nav="next" aria-label="Next">&raquo;</a></li>
                     </ul>
