--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -397,7 +397,7 @@ $(window).ready(function() {
             <h2 id="slideshow">Slideshow:</h2>
 
             <h3>Buttons</h3>
-            <div data-cfw="slideshow">
+            <div data-cfw="slideshow" data-cfw-slideshow-loop="true">
                 <div class="btn-group" role="region" aria-label="Slideshow navigation">
                     <button type="button" class="btn" data-cfw-slideshow-nav="prev" aria-label="Previous">&laquo;</button>
                     <button type="button" class="btn" data-cfw="tab" data-cfw-tab-target="#slideB0">Slide 1</button>
